# mortage-calculator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt  ruff.toml  scraper.py
.github/workflows/: bandit.yml
